--- a/templates/index.html
+++ b/templates/index.html
@@ -2,12 +2,42 @@
 <html>
     <head>
         <title>Shorter</title>
+        <link href="https://fonts.googleapis.com/css?family=Big+Shoulders+Display&display=swap" rel="stylesheet">
+        <style>
+            .container {
+                margin: auto;
+                width: 900px;
+                background-color: #d4c1ec;
+                padding: 30px;
+                font-family: 'Big Shoulders Display', cursive;
+            }
+
+            .container h1 {
+                width: 100%;
+                text-align: center;
+                font-weight: bold;
+                font-size: 60px;
+            }
+
+            .container input {
+                -webkit-box-sizing: border-box; /* Safari/Chrome, other WebKit */
+                -moz-box-sizing: border-box;    /* Firefox, other Gecko */
+                box-sizing: border-box;         /* Opera/IE 8+ */
+                width: 100%;
+                padding: 20px;
+                margin-bottom: 10px;
+                text-align: center;
+                font-size: 20px;
+            }
+        </style>
     </head>
     <body>
+      <div class="container">
         <h1>URL Shortner</h1>
         <form method="GET" action="/new">
             <input type="text" name="target"></input>
-            <input type="submit">Submit</button>
+            <input type="submit" value="Submit"></button>
         </form>
+      </div>
     </body>
 </html>
