--- a/templates/complete.html
+++ b/templates/complete.html
@@ -9,3 +9,47 @@
         <a href="/{{ token }}">https://s.hhra.uk/{{ token }}</a>
     </body>
 </html>
+
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>Shorter</title>
+        <link href="https://fonts.googleapis.com/css?family=Big+Shoulders+Display&display=swap" rel="stylesheet">
+        <style>
+            .container {
+                margin: auto;
+                width: 900px;
+                background-color: #d4c1ec;
+                padding: 30px;
+                font-family: 'Big Shoulders Display', cursive;
+                text-align: center;
+            }
+
+            #complete {
+                width: 100%;
+                text-align: center;
+                font-size: 40px;
+            }
+
+            a:link,
+            a:visited,
+            a:hover,
+            a:active {
+                color: #736ced;
+                text-decoration: none;
+            }
+
+            .container h1 {
+                width: 100%;
+                font-weight: bold;
+                font-size: 60px;
+            }
+        </style>
+    </head>
+    <body>
+      <div class="container">
+        <h1>Shortened URL</h1>
+        <a href="https://s.hhra.uk/UDCyxUgIYz" id="complete">https://s.hhra.uk/UDCyxUgIYz</a>
+      </div>
+    </body>
+</html>
