--- a/templates/complete.html
+++ b/templates/complete.html
@@ -1,15 +1,3 @@
-
-<!DOCTYPE html>
-<html>
-    <head>
-        <title>Shorter - Result</title>
-    </head>
-    <body>
-        <h1>Shortened URL:</h1>
-        <a href="/{{ token }}">https://s.hhra.uk/{{ token }}</a>
-    </body>
-</html>
-
 <!DOCTYPE html>
 <html>
     <head>
@@ -49,7 +37,7 @@
     <body>
       <div class="container">
         <h1>Shortened URL</h1>
-        <a href="https://s.hhra.uk/UDCyxUgIYz" id="complete">https://s.hhra.uk/UDCyxUgIYz</a>
+        <a href="/{{ token }}" id="complete">https://s.hhra.uk/{{ token }}</a>
       </div>
     </body>
 </html>
