--- a/templates/index.html
+++ b/templates/index.html
@@ -1,24 +1,26 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Shorter</title>
+        <title>short.rs</title>
         <link href="https://fonts.googleapis.com/css?family=Big+Shoulders+Display&display=swap" rel="stylesheet">
         <style>
+            body {
+              background-color: #B8C982;
+            }
             .container {
                 margin: auto;
                 width: 900px;
-                background-color: #d4c1ec;
+                background-color: #267452;
                 padding: 30px;
                 font-family: 'Big Shoulders Display', cursive;
+                color: #FDDA69;
             }
-
             .container h1 {
                 width: 100%;
                 text-align: center;
                 font-weight: bold;
                 font-size: 60px;
             }
-
             .container input {
                 -webkit-box-sizing: border-box; /* Safari/Chrome, other WebKit */
                 -moz-box-sizing: border-box;    /* Firefox, other Gecko */
@@ -28,15 +30,20 @@
                 margin-bottom: 10px;
                 text-align: center;
                 font-size: 20px;
+                background-color: #0B251A;
+                border-width: 1px;
+                border-color: #FDDA69;
+                border-style: solid;
+                color: #B8C982;
             }
         </style>
     </head>
     <body>
       <div class="container">
-        <h1>URL Shortner</h1>
+        <h1>SHORT.RS</h1>
         <form method="GET" action="/new">
-            <input type="text" name="target"></input>
-            <input type="submit" value="Submit"></button>
+            <input type="text" name="target"/>
+            <input type="submit" value="Submit"/>
         </form>
       </div>
     </body>
