--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,12 @@
               background-color: #B8C982;
             }
             .container {
-                margin: auto;
+                margin: 0;
+                position: absolute;
+                top: 50%;
+                left: 50%;
+                -ms-transform: translate(-50%, -50%);
+                transform: translate(-50%, -50%);
                 width: 900px;
                 background-color: #267452;
                 padding: 30px;
