Autofocus on input

--- a/templates/index.html
+++ b/templates/index.html
@@ -47,7 +47,7 @@
       <div class="container">
         <h1>SHORT.RS</h1>
         <form method="GET" action="/new">
-            <input type="text" name="target"/>
+            <input type="text" name="target" autofocus/>
             <input type="submit" value="Submit"/>
         </form>
       </div>
