--- a/templates/complete.html
+++ b/templates/complete.html
@@ -4,6 +4,9 @@
         <title>Shorter</title>
         <link href="https://fonts.googleapis.com/css?family=Big+Shoulders+Display&display=swap" rel="stylesheet">
         <style>
+            body {
+              background-color: #B8C982;
+            }
             .container {
                 margin: 0;
                 position: absolute;
