--- a/templates/complete.html
+++ b/templates/complete.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Shorter</title>
+        <title>short.rs</title>
         <link href="https://fonts.googleapis.com/css?family=Big+Shoulders+Display&display=swap" rel="stylesheet">
         <style>
             body {
