--- a/templates/index.html
+++ b/templates/index.html
@@ -4,8 +4,12 @@
         <title>short.rs</title>
         <link href="https://fonts.googleapis.com/css?family=Big+Shoulders+Display&display=swap" rel="stylesheet">
         <style>
+        * {
+          box-sizing: border-box;
+        }
+        
             body {
-              background-color: #B8C982;
+              background-color: #7FA5BF;
             }
             .container {
                 margin: 0;
@@ -14,11 +18,11 @@
                 left: 50%;
                 -ms-transform: translate(-50%, -50%);
                 transform: translate(-50%, -50%);
-                width: 900px;
-                background-color: #267452;
-                padding: 30px;
+                width: 700px;
+                background-color: #336487;
+                padding: 35px;
                 font-family: 'Big Shoulders Display', cursive;
-                color: #FDDA69;
+                color: #FFFFFF;
             }
             .container h1 {
                 width: 100%;
@@ -35,9 +39,9 @@
                 margin-bottom: 10px;
                 text-align: center;
                 font-size: 20px;
-                background-color: #0B251A;
+                background-color: #085656;
                 border-width: 1px;
-                border-color: #FDDA69;
+                border-color: #FFFFFF;
                 border-style: solid;
                 color: #B8C982;
             }
@@ -47,8 +51,8 @@
       <div class="container">
         <h1>SHORT.RS</h1>
         <form method="GET" action="/new">
-            <input type="text" name="target" autofocus/>
-            <input type="submit" value="Submit"/>
+            <input type="text" name="target" placeholder="Paste URL here"  autofocus/>
+            <input type="submit" value="Shorten"/>
         </form>
       </div>
     </body>
